[project]
name = "planbert-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "evaluate>=0.4.6",
    "keras>=3.12.1",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchmetrics>=1.8.2",
    "transformers>=5.1.0",
]
